--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
 
       - run:
           name: Run Tests
-          command: dotnet test --filter "TestCategory=Playwright"
+          command: dotnet test
 
 workflows:
   version: 2
