--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ executors:
   dotnet_executor:
     docker:
        - image: mcr.microsoft.com/dotnet/sdk:8.0
+       - image: circleci/google-chrome:latest 
     working_directory: ~/project
 
 jobs:
