--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,23 @@ jobs:
       - checkout
 
       - run:
+          name: Install PowerShell
+          command: |
+            wget https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+            sudo dpkg -i packages-microsoft-prod.deb
+            sudo apt-get update
+            sudo apt-get install -y powershell
+      - run:
           name: Restore NuGet packages
           command: dotnet restore
 
       - run:
           name: Build the project
           command: dotnet build --configuration Release
-
+          
+       - run:
+          name: Run Playwright Script
+          command: pwsh /root/project/TestAssignment/bin/x64/Debug/net8.0/playwright.ps1
       - run:
           name: Run Tests
           command: dotnet test
