--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,39 @@
+---
 version: 2.1
-
 executors:
   dotnet_executor:
     docker:
-       - image: mcr.microsoft.com/dotnet/sdk:8.0
-       - image: mcr.microsoft.com/playwright:bionic
+      - image: mcr.microsoft.com/dotnet/sdk:8.0
     working_directory: ~/project
-
 jobs:
   build:
     executor: dotnet_executor
     steps:
       - checkout
-
       - run:
           name: Install PowerShell
-          command: |
-            wget https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+          command: >
+            wget
+            https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb
+            -O packages-microsoft-prod.deb
+
             sudo dpkg -i packages-microsoft-prod.deb
+
             sudo apt-get update
+
             sudo apt-get install -y powershell
       - run:
           name: Restore NuGet packages
           command: dotnet restore
-
       - run:
           name: Build the project
-          command: dotnet build --configuration Release
-          
-       - run:
+          command: dotnet build --configuration Debug
+      - run:
           name: Run Playwright Script
           command: pwsh /root/project/TestAssignment/bin/x64/Debug/net8.0/playwright.ps1
       - run:
           name: Run Tests
           command: dotnet test
-
 workflows:
   version: 2
   test:
