--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,7 @@
 ---
 version: 2.1
+orbs:
+  browser-tools: circleci/browser-tools@1.4.1
 executors:
   dotnet_executor:
     docker:
@@ -10,27 +12,13 @@ jobs:
     executor: dotnet_executor
     steps:
       - checkout
-      - run:
-          name: Install PowerShell
-          command: >
-            wget
-            https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb
-            -O packages-microsoft-prod.deb
-
-            sudo dpkg -i packages-microsoft-prod.deb
-
-            sudo apt-get update
-
-            sudo apt-get install -y powershell
+      - browser-tools/install-chrome
       - run:
           name: Restore NuGet packages
           command: dotnet restore
       - run:
           name: Build the project
           command: dotnet build --configuration Debug
-      - run:
-          name: Run Playwright Script
-          command: pwsh /root/project/TestAssignment/bin/x64/Debug/net8.0/playwright.ps1
       - run:
           name: Run Tests
           command: dotnet test
