--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - run:
           name: Update apt and install gnupg2
-          command: sudo apt-get update && sudo apt-get install -y gnupg2
+          command: apt-get update && apt-get install -y gnupg2
       - browser-tools/install-chrome
       - run:
           name: Restore NuGet packages
