--- a/TestAssignment/appsettings.json
+++ b/TestAssignment/appsettings.json
@@ -12,7 +12,7 @@
     "ExpectTimeout": 5000,
     "LaunchOptions": {
       "Headless": false,
-      "Channel": "msedge"
+      "Channel": "chrome"
     }
   }
 }
