--- a/TestAssignment/appsettings.json
+++ b/TestAssignment/appsettings.json
@@ -11,7 +11,7 @@
     "BrowserName": "chromium",
     "ExpectTimeout": 5000,
     "LaunchOptions": {
-      "Headless": false,
+      "Headless": true,
       "Channel": "chrome"
     }
   }
