--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,12 @@ jobs:
           command: dotnet build --configuration Debug
       - run:
           name: Run Tests
-          command: dotnet test
+          command: |
+            dotnet test --logger "trx;LogFileName=test_results.trx"
+      - store_test_results:
+          path: test_results.trx
+      - store_artifacts:
+          path: test_results.trx
 workflows:
   version: 2
   test:
